# helm-moneyfwd

./: Dockerfile  README.md  pyproject.toml  run.py  train_model.py
.github/workflows/: dep.yml  dev_prod.yaml  main.yml
my-ml-api/: Chart.yaml  values-dev.yaml  values-staging.yaml  values.yaml
my-ml-api/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
my_flask_app/: __init__.py  isolation_forest_model.pkl
my_flask_app/flask-ml-api/my-ml-api/: Chart.yaml  values-dev.yaml  values-staging.yaml
my_flask_app/flask-ml-api/my-ml-api/templates/: _helpers.tpl  deployment.yaml  service.yaml
my_flask_app/flask-ml-api/my-ml-api/templates/tests/: test-connection.yaml
